[B]Retrospect v5.0.3 - Changelog - 2019-08-22[/B]

A new release that contains a number of changes for the NPO Start channel that enables users to configure their NPO Start account and watch all content to which they are entitled. Support for multiple profiles was added to the NPO Start favourites. Besides this the playlist generation code was simplified and the default behaviour for subtitles was changed to default to 'always show' subtitles whenever they are available.

[B]Framework related[/B]
* Fixed: ignore Channel InputStream Adaptive settings if encryption is needed

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Added: Option to disable InputStream Adaptive for VRT.Nu (Fixes #1210)