@@ -3,4 +3,4 @@ sonar.exclusions=plugin.video.retrospect/resources/libs/pyscrypt/*,plugin.video.
 #sonar.inclusions=
 
 sonar.projectName=Retrospect
-sonar.projectVersion=5.0.3
+sonar.projectVersion=5.0.4
