@@ -6,7 +6,7 @@ sonar.projectKey=Retrospect
 # sonar.login=%SONAR_TOKEN%
 
 sonar.projectName=Retrospect
-sonar.projectVersion=5.0.3
+sonar.projectVersion=5.0.4
 
 sonar.sources=.
 sonar.exclusions=plugin.video.retrospect/resources/libs/pyscrypt/*,plugin.video.retrospect/resources/libs/urllib3/**/*,plugin.video.retrospect/resources/libs/pyaes/*,plugin.video.retrospect/resources/libs/debug/**, **/*.pyc,**/*.pyo,plugin.video.retrospect/debugrun.py,plugin.video.retrospect/apiserver.py
